--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0",
     "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
